# whole_body_roller

./: .gitmodules  CMakeLists.txt
include/: casadi_helpers.hpp  constraint.hpp  control_decision_variables.hpp  dynamics.hpp  end_effector.hpp  pose_estimator.hpp  pose_estimator_interface.hpp  roller.hpp
include/task_space_constraints/: frame_acceleration.hpp
src/: constraint.cpp  control_decision_variables.cpp  dynamics.cpp  main.cpp  roller.cpp  test.cpp
